--- a/resources/screen-mobile.less
+++ b/resources/screen-mobile.less
@@ -228,12 +228,6 @@ div.thumb {
 
 .mw-body {
 	border: 0;
-
-	/* Keep images from overflowing */
-	a > img {
-		height: auto !important;
-		max-width: 100% !important;
-	}
 }
 
 #mw-content {
